crates/escalier_hm/src/parser/snapshots/escalier_hm__parser__tests__destructuring-10.snap
---
source: crates/escalier_hm/src/parser/mod.rs
expression: "parse(\"let {mut x, y: mut z} = point;\")"
---
Ok(
    Program {
        statements: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 30,
                    },
                },
                span: 0..30,
                kind: VarDecl(
                    VarDecl {
                        pattern: Pattern {
                            loc: SourceLocation {
                                start: Position {
                                    line: 0,
                                    column: 4,
                                },
                                end: Position {
                                    line: 0,
                                    column: 21,
                                },
                            },
                            span: 4..21,
                            kind: Object(
                                ObjectPat {
                                    props: [
                                        Shorthand(
                                            ShorthandPatProp {
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 0,
                                                        column: 5,
                                                    },
                                                    end: Position {
                                                        line: 0,
                                                        column: 10,
                                                    },
                                                },
                                                span: 5..10,
                                                ident: BindingIdent {
                                                    name: "x",
                                                    mutable: true,
                                                    span: 9..10,
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 9,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 10,
                                                        },
                                                    },
                                                },
                                                init: None,
                                            },
                                        ),
                                        KeyValue(
                                            KeyValuePatProp {
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 0,
                                                        column: 12,
                                                    },
                                                    end: Position {
                                                        line: 0,
                                                        column: 20,
                                                    },
                                                },
                                                span: 12..20,
                                                key: Ident {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 12,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 13,
                                                        },
                                                    },
                                                    span: 12..13,
                                                    name: "y",
                                                },
                                                value: Pattern {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 15,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 20,
                                                        },
                                                    },
                                                    span: 15..20,
                                                    kind: Ident(
                                                        BindingIdent {
                                                            name: "z",
                                                            mutable: true,
                                                            span: 15..20,
                                                            loc: SourceLocation {
                                                                start: Position {
                                                                    line: 0,
                                                                    column: 15,
                                                                },
                                                                end: Position {
                                                                    line: 0,
                                                                    column: 20,
                                                                },
                                                            },
                                                        },
                                                    ),
                                                    inferred_type: None,
                                                },
                                                init: None,
                                            },
                                        ),
                                    ],
                                    optional: false,
                                },
                            ),
                            inferred_type: None,
                        },
                        type_ann: None,
                        init: Some(
                            Expr {
                                loc: SourceLocation {
                                    start: Position {
                                        line: 0,
                                        column: 24,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 29,
                                    },
                                },
                                span: 24..29,
                                kind: Ident(
                                    Ident {
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 0,
                                                column: 24,
                                            },
                                            end: Position {
                                                line: 0,
                                                column: 29,
                                            },
                                        },
                                        span: 24..29,
                                        name: "point",
                                    },
                                ),
                                inferred_type: None,
                            },
                        ),
                        declare: false,
                    },
                ),
                inferred_type: None,
            },
        ],
    },
)
