crates/escalier_hm/src/parser/snapshots/escalier_hm__parser__tests__destructuring-12.snap
---
source: crates/escalier_hm/src/parser/mod.rs
expression: "parse(\"let [a, mut b, ...rest] = letters;\")"
---
Ok(
    Program {
        statements: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 34,
                    },
                },
                span: 0..34,
                kind: VarDecl(
                    VarDecl {
                        pattern: Pattern {
                            loc: SourceLocation {
                                start: Position {
                                    line: 0,
                                    column: 4,
                                },
                                end: Position {
                                    line: 0,
                                    column: 23,
                                },
                            },
                            span: 4..23,
                            kind: Tuple(
                                TuplePat {
                                    elems: [
                                        Some(
                                            TuplePatElem {
                                                pattern: Pattern {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 5,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 6,
                                                        },
                                                    },
                                                    span: 5..6,
                                                    kind: Ident(
                                                        BindingIdent {
                                                            name: "a",
                                                            mutable: false,
                                                            span: 5..6,
                                                            loc: SourceLocation {
                                                                start: Position {
                                                                    line: 0,
                                                                    column: 5,
                                                                },
                                                                end: Position {
                                                                    line: 0,
                                                                    column: 6,
                                                                },
                                                            },
                                                        },
                                                    ),
                                                    inferred_type: None,
                                                },
                                                init: None,
                                            },
                                        ),
                                        Some(
                                            TuplePatElem {
                                                pattern: Pattern {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 8,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 13,
                                                        },
                                                    },
                                                    span: 8..13,
                                                    kind: Ident(
                                                        BindingIdent {
                                                            name: "b",
                                                            mutable: true,
                                                            span: 8..13,
                                                            loc: SourceLocation {
                                                                start: Position {
                                                                    line: 0,
                                                                    column: 8,
                                                                },
                                                                end: Position {
                                                                    line: 0,
                                                                    column: 13,
                                                                },
                                                            },
                                                        },
                                                    ),
                                                    inferred_type: None,
                                                },
                                                init: None,
                                            },
                                        ),
                                        Some(
                                            TuplePatElem {
                                                pattern: Pattern {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 15,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 22,
                                                        },
                                                    },
                                                    span: 15..22,
                                                    kind: Rest(
                                                        RestPat {
                                                            arg: Pattern {
                                                                loc: SourceLocation {
                                                                    start: Position {
                                                                        line: 0,
                                                                        column: 18,
                                                                    },
                                                                    end: Position {
                                                                        line: 0,
                                                                        column: 22,
                                                                    },
                                                                },
                                                                span: 18..22,
                                                                kind: Ident(
                                                                    BindingIdent {
                                                                        name: "rest",
                                                                        mutable: false,
                                                                        span: 18..22,
                                                                        loc: SourceLocation {
                                                                            start: Position {
                                                                                line: 0,
                                                                                column: 18,
                                                                            },
                                                                            end: Position {
                                                                                line: 0,
                                                                                column: 22,
                                                                            },
                                                                        },
                                                                    },
                                                                ),
                                                                inferred_type: None,
                                                            },
                                                        },
                                                    ),
                                                    inferred_type: None,
                                                },
                                                init: None,
                                            },
                                        ),
                                    ],
                                    optional: false,
                                },
                            ),
                            inferred_type: None,
                        },
                        type_ann: None,
                        init: Some(
                            Expr {
                                loc: SourceLocation {
                                    start: Position {
                                        line: 0,
                                        column: 26,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 33,
                                    },
                                },
                                span: 26..33,
                                kind: Ident(
                                    Ident {
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 0,
                                                column: 26,
                                            },
                                            end: Position {
                                                line: 0,
                                                column: 33,
                                            },
                                        },
                                        span: 26..33,
                                        name: "letters",
                                    },
                                ),
                                inferred_type: None,
                            },
                        ),
                        declare: false,
                    },
                ),
                inferred_type: None,
            },
        ],
    },
)
